OverFlow Fix (#11)

--- a/src/scss/bootstrap-dialog.scss
+++ b/src/scss/bootstrap-dialog.scss
@@ -7,6 +7,7 @@
     font-size: $bootstrap-dialog-font-size;
 
     .modal-dialog {
+        max-width:100%;
         .modal-content {
             .modal-header {
                 border-top-left-radius: $modal-header-border-top-left-radius;
